# mpk

./: .dir-locals.el  .hgignore  BUILD.gn  Cargo.toml  DESIGN  Makefile  NOTES  README  README.md  README.org  STYLE  TODO  config.nims  do.nims  meson.build  pyproject.toml  readme.org  rustfmt.toml
crates/mpk_analysis/: Cargo.toml
crates/mpk_analysis/chromaprint/: Cargo.toml
crates/mpk_analysis/chromaprint/chromaprint_sys/: Cargo.toml  build.rs  wrapper.h
crates/mpk_analysis/chromaprint/chromaprint_sys/src/: lib.rs
crates/mpk_analysis/chromaprint/src/: lib.rs
crates/mpk_analysis/src/: essentia.rs  lib.rs
crates/mpk_arena/: Cargo.toml
crates/mpk_arena/src/: lib.rs  slab.rs
crates/mpk_audio/: Cargo.toml
crates/mpk_audio/src/: err.rs  lib.rs
crates/mpk_codec/: Cargo.toml
crates/mpk_codec/src/: ffmpeg.rs  lib.rs  snd.rs
crates/mpk_config/src/: lib.rs
crates/mpk_db/src/: db.rs  err.rs  factory.rs  lib.rs  query.rs  tree.rs  types.rs
crates/mpk_engine/: Cargo.toml
crates/mpk_engine/src/: engine.rs  err.rs  lib.rs  proxy.rs  vm.rs
crates/mpk_engine/src/vm/: compiler.rs  eval.rs  jit.rs  obj.rs  ops.rs
crates/mpk_ffi/: Cargo.toml  cbindgen.toml
crates/mpk_ffi/src/: lib.rs
crates/mpk_flate/: Cargo.toml
crates/mpk_flate/src/: lib.rs
crates/mpk_gc/: Cargo.toml
crates/mpk_gc/src/: lib.rs
crates/mpk_gear/src/: err.rs  lib.rs  octatrack.rs
crates/mpk_hash/src/: lib.rs
crates/mpk_http/: Cargo.toml
crates/mpk_http/src/: acoustid.rs  err.rs  freesound.rs  lib.rs  musicbrainz.rs
crates/mpk_jack/src/: lib.rs
crates/mpk_midi/src/: err.rs  monitor.rs
crates/mpk_osc/src/: ardour.rs  err.rs  lib.rs  mpk.rs  nsm.rs  supercollider.rs
crates/mpk_parser/: Cargo.toml
crates/mpk_parser/src/: arena.rs  ast.rs  decode.rs  encode.rs  err.rs  grammar.pest  lib.rs  parser.rs  span.rs  visitor.rs
crates/mpk_repl/: Cargo.toml
crates/mpk_repl/src/: dispatch.rs  eval.rs  helper.rs  lib.rs
crates/mpk_sesh/: Cargo.toml
crates/mpk_sesh/src/: lib.rs
crates/mpk_util/: Cargo.toml
crates/mpk_util/src/: lib.rs  nsm.rs  num.rs
crates/mpk_vm/: Cargo.toml
crates/mpk_vm/src/: address.rs  alloc.rs  allocation.rs  arena.rs  block.rs  block_alloc.rs  bounds.rs  c.rs  collector.rs  cons.rs  e.rs  gc.rs  i.rs  large_object_space.rs  lib.rs  m.rs  map.rs  o.rs  object.rs  rawptr.rs  safepoint.rs  signals.rs  space_bitmap.rs  tests.rs  thread.rs  util.rs  vm.rs
crates/mpk_vm/src/c/: cons.rs  gen.rs  map.rs  p.rs
crates/mpk_vm/src/m/: slab.rs
crates/mpk_vm/src/o/: vec.rs
crates/mpk_vm/src/signals/: unix.rs  windows.rs
crates/mpk_vm/src/util/: bitmap_const.rs  locks.rs  timer.rs
crates/mpk_vm/src/vm/: const_eval.rs  env.rs  eval.rs  h.rs  ops.rs  s.rs
el/: mpk-net.el
etc/: .jackdrc  config  mpd.conf  mpk.toml
ffi/: Cargo.toml  build.py  build.rs  cbindgen.toml
ffi/src/: lib.rs
freesound/: Cargo.toml
freesound/src/: lib.rs
lib/: Cargo.toml
lib/src/: err.rs  lib.rs
lisp/: mpk-midi.el  mpk-org.el
mfs/: Cargo.toml
mfs/src/: main.rs
misc/: jack_patch_01.xml  jack_patch_02.xml  pw-dewire.sh  pw-loadwires.py  pw-savewires.sh
misc/pw_tut/: t1.c  t2.c  t3.c  t4.c
mot/: Cargo.toml
mot/src/: main.rs
mpk_id3/src/: main.rs
mrm/: Cargo.toml
mrm/src/: main.rs
mtz/: Cargo.toml
mtz/src/: main.rs
org/: README.org  design.org  gear.org  install.org  manuals.org  notes.org  repertoire.org  style.org  techne.org  todo.org
ot/: Cargo.toml
ot/examples/: decode.rs  sample_chain.rs  track_prep.rs
ot/src/: lib.rs
scripts/: schain_ffmpeg.sh
src/: mpk.c
src/cli/otc/: Cargo.toml
src/elisp/: mpk-mode.el  mpk-org.el
src/jacki/: Cargo.toml
src/mdb/: Cargo.toml
src/mdb-id3/: Cargo.toml
src/mdb-id3/src/: main.rs
src/mdb/src/: err.rs  id3.rs  lib.rs  main.rs
src/mdb_audio/: mdb-info.py  mdb-preprocess.py
src/mdb_emacs/: Cargo.toml
src/mdb_emacs/src/: lib.rs
src/mdb_id3/: Cargo.toml
src/mdb_py/: utils.py
src/mfe/: Cargo.toml
src/mpk/: Cargo.toml
src/mpk/src/: daemon.rs  err.rs  lib.rs  main.rs
src/mpk_analysis/: Cargo.toml  mpk_extractor.py
src/mpk_ast/: Cargo.toml
src/mpk_audio/: Cargo.toml
src/mpk_codec/: Cargo.toml
src/mpk_config/: Cargo.toml
src/mpk_db/: Cargo.toml
src/mpk_db/src/: db.rs  edge.rs  err.rs  factory.rs  graph.rs  id.rs  init.sql  lib.rs  main.rs  node.rs  query.rs  ser.rs  tree.rs  types.rs
src/mpk_db/src/edge/: kind.rs
src/mpk_db/src/node/: kind.rs
src/mpk_db/src/types/: edge.rs  id3.rs  meta.rs  prop.rs
src/mpk_dsp/: Cargo.toml
src/mpk_el/: mpk-midi.el  mpk.el
src/mpk_emacs/: Cargo.toml
src/mpk_essentia/: essentia_sys.nim  loudness.py  metadata.py  spec_inverse.py  spectrals.py
src/mpk_extract/: beats.py  essentia.nim  extractor.py  main.py  onsets.py
src/mpk_ffi/: Cargo.toml  build.py  build.rs  cbindgen.toml  mpk.py  mpk_ffi.h
src/mpk_ffi/src/: lib.rs
src/mpk_ffi/tests/: mpk_ffi_test.c
src/mpk_fft/: Cargo.toml
src/mpk_flate/: Cargo.toml
src/mpk_gear/: Cargo.toml
src/mpk_hash/: Cargo.toml
src/mpk_http/: Cargo.toml
src/mpk_http/src/: coverartarchive.rs  err.rs  freesound.rs  lib.rs  musicbrainz.rs
src/mpk_hw/: Cargo.toml
src/mpk_id3/: Cargo.toml
src/mpk_jack/: Cargo.toml
src/mpk_midi/: Cargo.toml
src/mpk_osc/: Cargo.toml
src/mpk_parser/: Cargo.toml
src/mpk_plot/: Cargo.toml
src/mpk_py/: main.py  mpk.py  mpk_extract.py  mpk_extractor.py
src/mpk_repl/: Cargo.toml
src/mpk_repl/src/: dispatch.rs  err.rs  eval.rs  grammar.lalrpop  helper.rs  lib.rs  parser.rs  sesh.rs
src/mpk_repl/src/parser/: lexer.rs  location.rs  token.rs
src/mpk_sesh/: Cargo.toml
src/octatrack/: Cargo.toml
src/prophet/: Cargo.toml
src/rytm/: Cargo.toml
tests/: disk_arbiter_test.c  jack_start.sh  luke_vibert-bongo_beats-mb.json  luke_vibert-bongo_beats.json  luke_vibert-funkyacidstuff.json  mpk_ffi_test.c  mpk_ffi_test.py  mpk_test.py
tests/benches/: Cargo.toml  database.rs  edge_factory.rs  gc.rs  hashers.rs  lib.rs  node_factory.rs
tests/lab/: bench.scm  config.nims  grains.ck  gu_adsr.c  rhodes.ck  s7_repl.c  tsr7  tsr7.c  tsr7_repl.c
(+75 files in other folders)
