[workspace]
members = [
  "src/mpk",
  "src/mpk_config",
  "src/mpk_util",
  "src/mpk_audio",
  "src/mpk_midi",
  "src/mpk_jack",
  "src/mpk_flate",
  "src/mpk_hash",
  "src/mpk_gear",
  "src/mpk_codec",
  "src/mpk_db",
  "src/mpk_plot",
  "src/mpk_sesh",
  "src/mpk_repl",
  "src/mpk_ffi",
  "src/mpk_http",
  "src/mpk_osc",
  "src/mpk_ast",
]

exclude = [ "vendor/" ]

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1