[workspace]
members = [
  "lib",
  "bin",
  "ffi",
  "crates/mpk_config",
  "crates/mpk_util",
  "crates/mpk_arena",
  "crates/mpk_audio",
  "crates/mpk_midi",
  "crates/mpk_jack",
  "crates/mpk_flate",
  "crates/mpk_hash",
  "crates/mpk_gear",
  "crates/mpk_codec",
  "crates/mpk_engine",
  "crates/mpk_analysis",
  "crates/mpk_analysis/chromaprint",
  "crates/mpk_analysis/chromaprint/chromaprint_sys",
  "crates/mpk_db",
  "crates/mpk_sesh",
  "crates/mpk_repl",
  "crates/mpk_http",
  "crates/mpk_osc",
  "crates/mpk_parser",
  "tests/benches",
]

exclude = [ "vendor/", "tests/lab" ]

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
opt-level = 3