[tool.poetry]
name = "mpk"
version = "0.1.0.alpha1"
description = "Media Programming Kit Python bindings"
authors = [ "ellis <ellis@rwest.io>" ]
license = "WTFPL"
homepage = "https://github.com/richardwesthaver/mpk"
repository = "https://hg.rwest.io/mpk"
keywords = ["media", "Rust", "FFI", "audio"]
include = ["README.org"]
packages = [
	 { include = "mpk", from = "src/mpk_py/mpk" },
	 { include = "mpk_extract", from = "src/mpk_py/main.py" },
	 ]

[tool.poetry.dependencies]
numpy = ">=1.21.5,<1.22"
essentia = { git = "https://github.com/MTG/essentia.git" }
librosa = "^0.9.1"
python = ">=3.9,<3.11"

[tool.poetry.dev-dependencies]
black = {version = ">=21", python = ">=3.9"}

[tool.poetry.scripts]
main = "main:run"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'