[package]
name = "mpk_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type =["cdylib"]

[dependencies]
mpk_config = { path = "../crates/mpk_config" }
mpk_hash = { path = "../crates/mpk_hash" }
#mpk_db = { path = "../crates/mpk_db" }
#mpk_flate = { path = "../crates/mpk_flate" }
#mpk_sesh = { path = "../crates/mpk_sesh" }
#mpk_midi = { path = "../crates/mpk_midi" }
#mpk_gear = { path = "../crates/mpk_gear" }
#mpk_jack = { path = "../crates/mpk_jack" }
libc = "0.2"

[build-dependencies]
cbindgen = "0.20"