[package]
name = "freesound"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
oauth2 = { version = "4.1", features = ["rustls-tls"]}
indicatif = "0.16"