[package]
name = "mpk"
version = "0.1.0"
edition = "2021"

[features]
full = ["util", "analysis", "config", "hash", "flate",
        "gear", "audio", "jack", "midi", "db", "osc",
	"engine", "sesh", "http", "parser", "repl"]
util = ["mpk_util"]
config = ["mpk_config"]
hash = ["mpk_hash"]
flate = ["mpk_flate"]
midi = ["mpk_midi"]
parser = ["mpk_parser"]
codec = ["mpk_codec"]
analysis = ["mpk_analysis", "util", "codec"]
gear = ["mpk_gear", "audio"]
audio = ["mpk_audio", "config"]
jack = ["mpk_jack", "config"]
db = ["mpk_db", "config", "util", "hash"]
osc = ["mpk_osc", "util"]
vm = ["mpk_vm"]
engine = ["mpk_engine", "config", "parser", "osc", "db", "http", "audio", "jack", "midi", "sesh"]
sesh = ["mpk_sesh", "config", "osc", "hash", "db", "audio"]
http = ["mpk_http", "config", "util"]
repl = ["mpk_repl", "config", "parser", "osc"]

[dependencies]
mpk_util = { path = "../crates/mpk_util", optional = true }
mpk_vm = { path = "../crates/mpk_vm", optional = true }
mpk_analysis = { path = "../crates/mpk_analysis", optional = true }
mpk_config = { path = "../crates/mpk_config", optional = true }
mpk_hash = { path = "../crates/mpk_hash", optional = true }
mpk_codec = { path = "../crates/mpk_codec", optional = true }
mpk_audio = { path = "../crates/mpk_audio", optional = true }
mpk_jack = { path = "../crates/mpk_jack", optional = true }
mpk_midi = { path = "../crates/mpk_midi", optional = true }
mpk_db = { path = "../crates/mpk_db", optional = true }
mpk_osc = { path = "../crates/mpk_osc", optional = true }
mpk_engine = { path = "../crates/mpk_engine", optional = true }
mpk_sesh = { path = "../crates/mpk_sesh", optional = true }
mpk_flate = { path = "../crates/mpk_flate", optional = true }
mpk_gear = { path = "../crates/mpk_gear", optional = true }
mpk_http = { path = "../crates/mpk_http", optional = true }
mpk_parser = { path = "../crates/mpk_parser", optional = true }
mpk_repl = { path = "../crates/mpk_repl", optional = true }
