[package]
name = "mpk_analysis"
version = "0.1.0"
edition = "2021"

[features]
default = ["ffmpeg"]
ffmpeg = ["mpk_codec/ffmpeg"]
snd = ["mpk_codec/snd"]

[dependencies]
mpk_util = { path = "../mpk_util" }
mpk_codec = { path = "../mpk_codec" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"