[package]
name = "mpk_analysis"
version = "0.1.0"
edition = "2021"

[features]
default = ["ffmpeg", "chromaprint"]
ffmpeg = ["mpk_codec/ffmpeg"]
snd = ["mpk_codec/snd"]

[dependencies]
mpk_util = { path = "../mpk_util" }
mpk_codec = { path = "../mpk_codec" }
chromaprint = { path = "chromaprint", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
