[package]
name = "mpk_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
mpk_hash = { path = "../mpk_hash" }
mpk_osc = { path = "../mpk_osc" }
pest = "2.0"
pest_derive = "2.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
# phf = { version = "0.10", features = ["macros"] }
chrono = {version = "0.4", features = ["serde"] }