[package]
name = "mpk_sesh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mpk_osc = { path = "../mpk_osc" }
mpk_hash = { path = "../mpk_hash" }
mpk_db = { path = "../mpk_db" }
mpk_audio = { path = "../mpk_audio" }
mpk_config = { path = "../mpk_config" }