[package]
name = "mpk_vm"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic = { version = "0.5", optional = true }
memmap2 = "0.5"
libc = "0.2"
time = "0.3"
parking_lot = { version = "0.12", optional = true }
parking_lot_core = { version = "0.9", optional = true }
log = { version = "0.4", optional = true }
simple_logger = "2.1"
instant = "0.1"
once_cell = "1.10"
vec_map = "0.8"
mpk_hash = { path = "../mpk_hash" }
mpk_parser = { path = "../mpk_parser" }
errno = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "memoryapi",
    "winnt",
    "sysinfoapi",
    "minwinbase",
    "errhandlingapi",
    "excpt",
    "minwindef",
] }

[features]
default = ["threaded", "line-size-128"]
threaded = ["parking_lot", "atomic", "parking_lot_core"]
willdebug = []
line-size-128 = []
line-size-256 = []
line-size-512 = []
line-size-1024 = []

[dev-dependencies]
serial_test = { version = "0.6", features = ["file_locks"] }

# [profile.release]
# debug = true
# lto = "fat"
# opt-level = 3

[profile.dev]
debug = true
lto = "fat"