[package]
name = "mpk"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
mpk_config = { path = "../mpk_config" }
mpk_audio = { path = "../mpk_audio" }
mpk_midi = { path = "../mpk_midi" }
mpk_db = { path = "../mpk_db" }
mpk_plot = { path = "../mpk_plot" }
mpk_flate = { path = "../mpk_flate" }
mpk_gear = { path = "../mpk_gear" }