[package]
name = "mpk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mpk"
path = "src/main.rs"

[[bin]]
name = "mpkd"
path = "src/daemon.rs"

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
tokio = { version = "1.17", default-features = false, features=["rt-multi-thread"] }
mpk_util = { path = "../mpk_util" }
mpk_config = { path = "../mpk_config" }
mpk_audio = { path = "../mpk_audio" }
mpk_jack = { path = "../mpk_jack" }
mpk_midi = { path = "../mpk_midi" }
mpk_db = { path = "../mpk_db" }
mpk_osc = { path = "../mpk_osc" }
mpk_sesh = { path = "../mpk_sesh" }
mpk_plot = { path = "../mpk_plot" }
mpk_flate = { path = "../mpk_flate" }
mpk_gear = { path = "../mpk_gear" }
mpk_http = { path = "../mpk_http" }
mpk_repl = { path = "../mpk_repl" }