[package]
name = "mpk_db"
version = "0.1.0"
edition = "2021"

[dependencies]
mpk_config = { path = "../mpk_config" }
mpk_hash = { path = "../mpk_hash" }
rusqlite = { version = "0.26", features = ["blob", "trace", "uuid", "hooks", "chrono", "backup", "vtab"] }
uuid = { version = "0.8", features = ["serde"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
csv = "1.1"
