[package]
name = "mpk_db"
version = "0.1.0"
edition = "2021"

[dependencies]
mpk_config = { path = "../mpk_config" }
mpk_util = { path = "../mpk_util" }
mpk_hash = { path = "../mpk_hash" }
#uuid = { version = "0.8", features = ["serde"] }
#chrono = "0.4"
sled = { version = "0.34", features = ["compression"] }
rkyv = { version = "0.7", features = ["validation"] }