[package]
name = "mpk_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type =["cdylib"]

[dependencies]
mpk_db = { path = "../mpk_db" }
mpk_config = { path = "../mpk_config" }
mpk_flate = { path = "../mpk_flate" }
mpk_sesh = { path = "../mpk_sesh" }
mpk_midi = { path = "../mpk_midi" }
mpk_gear = { path = "../mpk_gear" }
mpk_jack = { path = "../mpk_jack" }
libc = "0.2"
[build-dependencies]
cbindgen = "0.20"