[package]
name = "mpk_http"
version = "0.1.0"
edition = "2021"

[features]
default = ["oauth2"]

[dependencies]
mpk_config = { path = "../mpk_config" }
tokio = { version = "1.17", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
oauth2 = { version = "4.1", optional = true }
jsonwebtoken = { version = "8", default_features = false }
google-youtube3 = "3.0"
rspotify = "0.11"