[package]
name = "mpk_http"
version = "0.1.0"
edition = "2021"

[features]
default = ["oauth2"]

[dependencies]
mpk_config = { path = "../mpk_config" }
mpk_util = { path = "../mpk_util" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.17", features = ["full"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
oauth2 = { version = "4.1", optional = true }
jsonwebtoken = { version = "8", default_features = false }
google-youtube3 = "3.0"
rspotify = "0.11"
