[package]
name = "mpk_repl"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = { git = "https://github.com/kkawakam/rustyline" }
rustyline-derive = "0.6"
tokio = { version = "1.0", features = ["net", "sync"] }
mpk_config = { path = "../mpk_config" }
mpk_parser = { path = "../mpk_parser" }
mpk_osc = { path = "../mpk_osc" }