[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
mpk_db = { path = "../../crates/mpk_db" }
mpk_hash = { path = "../../crates/mpk_hash" }
mpk_gc = { path = "../../crates/mpk_gc" }
rand = "0.8"

[[bench]]
name = "node_factory"
path = "node_factory.rs"

[[bench]]
name = "edge_factory"
path = "edge_factory.rs"

[[bench]]
name = "database"
path = "database.rs"

[[bench]]
name = "hashers"
path = "hashers.rs"

[[bench]]
name = "gc"
path = "gc.rs"